Draw 8 rectangles for each of the 2048 vu meters, 60 times.
Signed-off-by: Leon Woestenberg <leon@sidebranch.com>

--- a/gbm-egl-performance/Makefile
+++ b/gbm-egl-performance/Makefile
@@ -2,5 +2,5 @@
 
 
 all:
-	$(CC) -std=c99 -g -o gbm-egl-performance main.c -lgbm -lepoxy -lpng
+	$(CC) $(CFLAGS) $(LDFLAGS) -std=c99 -o gbm-egl-performance main.c -lgbm -lepoxy -lpng
 
