egl-gbm-streaming: Measure rendering time. Add streaming variant.
Signed-off-by: Leon Woestenberg <leon@sidebranch.com>

--- a/gbm-egl-streaming/Makefile
+++ b/gbm-egl-streaming/Makefile
@@ -2,5 +2,5 @@
 
 
 all:
-	$(CC) $(CFLAGS) $(LDFLAGS) -std=c99 -o gbm-egl-streaming main.c -lm -lgbm -lepoxy -lpng
+	$(CC) $(CFLAGS) $(LDFLAGS) -std=c99 -o gbm-egl-streaming main.c -lrt -lm -lgbm -lepoxy -lpng
 
