Load shaders from /usr/share/<program name>/
Signed-off-by: Leon Woestenberg <leon.woestenberg@axon.tv>

--- a/gbm-surface-clear/Makefile
+++ b/gbm-surface-clear/Makefile
@@ -1,5 +1,5 @@
 #!makefile
 
 all:
-	gcc -std=c99 -g -o gbm-surface main.c -lgbm -lepoxy -lpng
+	$(CC) -std=c99 -g -o gbm-surface main.c -lgbm -lepoxy -lpng
 
