--- a/offscreen/Makefile
+++ b/offscreen/Makefile
@@ -2,5 +2,5 @@
 
 
 all:
-	gcc -std=c99 -g -I/usr/include/libdrm -o gbm main.c -lgbm -lEGL -lGL -ldrm -lpng
+	$(CC) -std=c99 -g -I/usr/include/libdrm -o gbm main.c -lgbm -lEGL -lGL -ldrm -lpng
 
