--- a/gbm-surface/Makefile
+++ b/gbm-surface/Makefile
@@ -1,5 +1,5 @@
 #!makefile
 
 all:
-	gcc -std=c99 -g -o gbm-surface main.c -lgbm -lepoxy -lpng
+	$(CC) -std=c99 -g -o gbm-surface main.c -lgbm -lepoxy -lpng
 
