--- a/gbm-egl/Makefile
+++ b/gbm-egl/Makefile
@@ -2,5 +2,5 @@
 
 
 all:
-	$(CC) $(CFLAGS) $(LDFLAGS) std=c99 main.c -lgbm -lepoxy -lpng -lrt -lm -o gbm-egl
+	$(CC) $(CFLAGS) $(LDFLAGS) -std=c99 main.c -lgbm -lepoxy -lpng -lrt -lm -o gbm-egl
 
