--- a/gbm-egl-compositing/Makefile
+++ b/gbm-egl-compositing/Makefile
@@ -2,5 +2,5 @@
 
 
 all:
-	$(CC) $(CFLAGS) $(LDFLAGS) -std=c99 -o gbm-egl-compositing main.c -lrt -lm -lgbm -lepoxy -lpng
+	$(CC) $(CFLAGS) $(LDFLAGS) -ggdb -std=c99 -o gbm-egl-compositing main.c -lrt -lm -lgbm -lepoxy -lpng
 
